--- a/packages/craco/package.json
+++ b/packages/craco/package.json
@@ -40,7 +40,7 @@
     "craco": "./dist/bin/craco.js"
   },
   "peerDependencies": {
-    "react-scripts": "^5.0.0"
+    "react-scripts": "github:COH-IT-Software-Engineering/craco"
   },
   "devDependencies": {
     "@babel/types": "^7.19.3",
@@ -54,7 +54,7 @@
     "babel-jest": "^29.7.0",
     "eslint-webpack-plugin": "^3.2.0",
     "jest": "^27.5.1",
-    "react-scripts": "5.*",
+    "react-scripts": "github:COH-IT-Software-Engineering/craco",
     "ts-jest": "^27.1.5",
     "typescript": "^4.8.4",
     "webpack": "^5.74.0"
